lavfi/af_pan: support unknown layouts on input.

Fix trac ticket #2899.
(cherry picked from commit 7b0a587393e03dab552d66450d43ab82bda0a5a1)